[package]
name = "roguelike"
version = "0.1.5"
authors = ["FerixSeverin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "5bd6deb9749067143efb2dbb681448d94af54e83"}
serde = { version = "1.0.117", features = ["derive"] }
ron = "0.6.2"
rand = "0.7.3"